--- a/index.html
+++ b/index.html
@@ -11,11 +11,8 @@
     <body>
         <div class="main-container">
             <div class="search-bar-container">
-                <div class="icon-container">
-                    <i class="fa-solid fa-magnifying-glass"></i>
-                </div>
                 <div class="search-input-container">
-                    <input type="text" class="search-bar" placeholder="Search">
+                    <input type="text" class="search-bar" placeholder=" Search">
                 </div>
             </div>
             <div class="search-results-container">
